# sky_fury

./: CMakeLists.txt  README.md  animaciones.h  avion.h  bala.h  balaTipo1.h  enemigo.h  enemigo1.h  enemigo2.h  general.h  imagen.h  main.cpp  misil.h  musica.h  nave_blindada.h  nave_invasora.h  proyectil.h  proyecto_SDL_final.vcxproj  proyecto_SDL_final.vcxproj.filters  puntajes.txt
sonidos/: sonido_balas.mpeg
x64/Debug/: main.cpp  main.obj.enc  proyecto_SDL_final.exe.recipe  proyecto_SDL_final.ilk  proyecto_SDL_final.vcxproj  vc143.idb
x64/Debug/proyecto.32b769d9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  proyecto_SDL_final.lastbuildstate
